--- a/HW02.Rmd
+++ b/HW02.Rmd
@@ -47,7 +47,7 @@ In that code chunk:
 
 **Problem 4: Adding code snippets to RStudio**
 
-Code snippets are useful for creating shortcuts for task you repeat. Copy the snippet below and then got to `Tools -> Edit Code Snippets` and paste the snippet. Save. 
+Code snippets are useful for creating shortcuts for task you repeat. Copy the snippet below and then go to `Tools -> Edit Code Snippets` and paste the snippet. Save. 
 
 ```
 snippet proj_dir
@@ -58,10 +58,11 @@ snippet proj_dir
 
 **Problem 5: Running code snippets**
 
-For this snippet, you only have to do it once, so the recommendation is to type the snippet hotstring `proj_dir` at the `R` console prompt. When you start typing, RStudio will likely start to auto-populate options and one that will appear is `proj_dir   {snippet}`. Select it an run that code in the console.
+For this snippet, you only have to do it once, so the recommendation is to type the snippet hotstring `proj_dir` at the `R` console prompt (typically located in bottom left of RStudio). When you start typing, RStudio will likely start to auto-populate options and one that will appear is `proj_dir   {snippet}`. Select it an run that code in the console.
 
 The snippet is using the `lapply()` function to apply a function to either a `list` or a `vector` object. The `vector` is a character vector containing several elements which will become names of directories (e.g., `"/r"`) or sub-directories (e.g., `"/notes/more notes"`. That `vector` is then passed to `dir.create()`, which will create (iteratively, element by element) a directory (or sub-directory) at the specified path location. That location is the path returned by `here::here()`. 
 
+(I assume students are somewhat familiar with file systems and directories, but I have read kids are becoming less and less competent with them, so a brief explaination in class may be useful.)
 
 Run the code snippet at the console to create the directories. Must be done for next step to work.
 
