--- a/HW04.Rmd
+++ b/HW04.Rmd
@@ -63,7 +63,8 @@ For this homework, you will use the hammer throw data at: "https://github.com/sl
 
 # *Creating a bar plot*
 
-(a) Use **{ggplot}** to make a bar plot containing the total count for each `Season`.  
+(a) Use **{ggplot}** to make a bar plot containing the total <s>count</s> data points(?) for each `Season`.  
+There may need to be some clarification about what counts is reffering to.
 
 ```{r}
 
@@ -112,7 +113,7 @@ gsub(pattern,
      )
 ```
 
-Looking at this function, `?gsub()`, you will see you will need to pass an argument for the string `pattern` to search for, the string you want that `replacement` to be, and the vector, `x` you want to modify. The other default arguments could be changed if you cannot fix your vector using those defaults. In the end, your goal will be to replace `Mark` with a numeric form (your tibble will display this specifically as type double, a floating-point number). For those curious, `R` tends to convert single-precision values as double-precision values, though this is more memory intensive (64bit). 
+Looking at this function, `?gsub()`, you will see you will need to pass an argument for the string `pattern` to search for, the string you want that `replacement` to be, and the vector, `x` you want to modify. The other default arguments could be changed if you cannot fix your vector using those defaults. In the end, your goal will be to replace the name `Mark` with a numeric form (your tibble will display this specifically as type double, a floating-point number). For those curious, `R` tends to convert single-precision values as double-precision values, though this is more memory intensive (64bit). 
 
 `mutate()` is actually a very friendly function. First, you don't have to nest a bunch of functions so that your variable name-value pair is all on one line. If doing so is confusing, `mutate()` will perform the mutation before proceeding to the next name-value pair, so you can break down a mutation into smaller pieces if necessary. 
 
@@ -125,7 +126,7 @@ mutate(.,
   )
 ```
 
-Second, you will also notice that there is a `,` on the second declaration of `Var1`. Whereas this orphan often breaks functions that are looking for you passing other arguments in that position, this comma does not cause a problem for `mutate()`.
+Second, you will also notice that there is a `,` on the second declaration of `Var1`. Whereas this orphan comma often breaks functions that are looking for you passing other arguments in that position, this comma does not cause a problem for `mutate()`.
 
 (a) Whether you accomplish the problem in one or two lines, fix the `Mark` variable in the data frame so that you can perform statistical operations on it.
 
