--- a/HW07.Rmd
+++ b/HW07.Rmd
@@ -72,7 +72,7 @@ Using some data set from your project:
 # **Thinking Smarter Not Harder**
 *Project data, multiple geoms, colors, and breaks*
 
-At this point in the semester, you should have the data for your project across all of the years combined and these are in a single data frame and written as an uber `.csv` file. Most likely, this uber file should be cleaned up somewhat. For example, the key performance metric should be cleaned up, some factor variables should be factors, some ordered factors should be ordered, etc. Given these edits, the uber file should be saved as an `.Rds` file to preserve data frame elements like ordered factors and others. If your team has not accomplished this task of cleaning your file and writing it as an `.Rds` file, you know what you must do for next week. In that case, you can omit this problem for this week but must submit it with the homework next week.
+At this point in the semester, you should have the data for your project across all of the years combined and these are in a single data frame and written as an uber `.csv` file (what do you mean by uber). Most likely, this uber file should be cleaned up somewhat. For example, the key performance metric should be cleaned up, some factor variables should be factors, some ordered factors should be ordered, etc. Given these edits, the uber file should be saved as an `.Rds` file to preserve data frame elements like ordered factors and others. If your team has not accomplished this task of cleaning your file and writing it as an `.Rds` file, you know what you must do for next week. In that case, you can omit this problem for this week but must submit it with the homework next week.
 
 This problem is to encourage thinking programmatically so that you can help out your future self. **You want to avoid all temptations with hard coding**. This type of thinking does not always come easily. So let's do a walk through of some logic to provide an example of working smarter rather than harder.
 
